# pontifex

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  cspell.json  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  initiate-release.yml  release.yml  relyance-sci.yml  validate-pr.yml
example/: .dockerignore  Cargo.toml  Dockerfile.enclave  Makefile  README.md
example/src/: lib.rs  types.rs
src/: client.rs  http.rs  kms.rs  lib.rs  nsm.rs  server.rs  utils.rs
src/utils/: http.rs  kms.rs  mod.rs
tests/: mock-attestation-doc.cose
