[package]
license = "MIT"
edition = "2024"
name = "pontifex"
version = "0.1.1"
readme = "README.md"
homepage = "https://github.com/m1guelpf/pontifex"
repository = "https://github.com/m1guelpf/pontifex"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
keywords = ["aws", "amazon", "enclave", "nitro", "attestation"]
categories = ["cryptography", "hardware-support", "development-tools::ffi"]
description = "An abstraction for building and interacting with AWS Nitro enclaves."

[dependencies]
serde = "1.0.219"
tracing = "0.1.41"
rmp-serde = "1.3.0"
thiserror = "2.0.12"
tokio-vsock = "0.7.1"
sha2 = { version = "0.10.9", optional = true }
aws-types = { version = "*", optional = true }
rustls = { version = "0.21.8", optional = true }
aws-sdk-kms = { version = "1.72.0", optional = true }
tokio = { version = "1.44.2", features = ["io-util"] }
serde_bytes = { version = "0.11.17", optional = true }
serde_cbor = { version = "0.11.2", default-features = false, optional = true }
aws-nitro-enclaves-cose = { version = "0.5.2", optional = true, default-features = false }
aws-nitro-enclaves-nsm-api = { version = "0.4.0", optional = true, default-features = false }
hyper-rustls = { version = "<0.26", optional = true, features = [
    "webpki-roots",
] }
aws-smithy-runtime-api = { version = "1.8.0", features = [
    "client",
], optional = true }
hyper = { version = "0.14.26", features = [
    "client",
    "http1",
    "http2",
], optional = true }
aws-smithy-http-client = { version = "1.0.2", features = [
    "hyper-014",
], optional = true }

[features]
default = ["kms"]
client = []
server = ["tokio/rt"]
nsm = ["nsm-types", "aws-nitro-enclaves-nsm-api/nix", "tokio/sync"]
kms = [
    "dep:hyper",
    "dep:rustls",
    "dep:aws-types",
    "dep:aws-sdk-kms",
    "dep:hyper-rustls",
    "dep:aws-smithy-runtime-api",
    "dep:aws-smithy-http-client",
]
nsm-types = [
    "dep:sha2",
    "dep:serde_cbor",
    "dep:serde_bytes",
    "dep:aws-nitro-enclaves-cose",
    "dep:aws-nitro-enclaves-nsm-api",
]

[package.metadata.docs.rs]
all-features = true
