[package]
license = "MIT"
edition = "2024"
name = "pontifex"
version = "0.1.2"
readme = "README.md"
homepage = "https://docs.rs/pontifex"
repository = "https://github.com/worldcoin/pontifex"
authors = [
    "Miguel Piedrafita <rust@miguel.build>",
    "Paolo D'Amico <paolodamico@users.noreply.github.com>",
]
keywords = ["aws", "amazon", "enclave", "nitro", "attestation"]
categories = ["cryptography", "hardware-support", "development-tools::ffi"]
description = "An abstraction for building and interacting with AWS Nitro enclaves."

[features]
client = []
server = ["tokio/rt"]
nsm = ["nsm-types", "aws-nitro-enclaves-nsm-api/nix", "tokio/sync"]
nsm-types = [
    "dep:sha2",
    "dep:serde_cbor",
    "dep:serde_bytes",
    "dep:aws-nitro-enclaves-cose",
    "dep:aws-nitro-enclaves-nsm-api",
]
kms = [
    "dep:hyper",
    "dep:rustls",
    "dep:aws-types",
    "dep:aws-sdk-kms",
    "dep:hyper-rustls",
    "dep:aws-smithy-runtime-api",
    "dep:aws-smithy-http-client",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
aws-nitro-enclaves-cose = { version = "0.5", optional = true, default-features = false }
aws-nitro-enclaves-nsm-api = { version = "0.4", optional = true, default-features = false }
aws-sdk-kms = { version = "1.72.0", optional = true }
aws-smithy-http-client = { version = "1.0.2", features = [
    "hyper-014",
], optional = true }
aws-smithy-runtime-api = { version = "1.8.0", features = [
    "client",
], optional = true }
aws-types = { version = "*", optional = true }
hyper-rustls = { version = "<0.27.0", optional = true, features = [
    "webpki-roots",
] }
hyper = { version = "0.14", features = [
    "client",
    "http1",
    "http2",
], optional = true }
rmp-serde = "1"
rustls = { version = "0.21.8", optional = true }
serde = "1"
serde_bytes = { version = "0.11", optional = true }
serde_cbor = { version = "0.11", default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["io-util"] }
tokio-vsock = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
