[package]
license = "MIT"
edition = "2024"
name = "pontifex"
version = "1.0.1"
readme = "README.md"
homepage = "https://docs.rs/pontifex"
repository = "https://github.com/worldcoin/pontifex"
authors = [
    "Miguel Piedrafita <rust@miguel.build>",
    "Paolo D'Amico <paolodamico@users.noreply.github.com>",
]
keywords = ["aws", "amazon", "enclave", "nitro", "attestation"]
categories = ["cryptography", "hardware-support", "development-tools::ffi"]
description = "An abstraction for building and interacting with AWS Nitro enclaves."

[features]
default=["http"]
client = []
server = ["tokio/rt"]
nsm = ["nsm-types", "aws-nitro-enclaves-nsm-api/nix", "tokio/sync"]
nsm-types = [
    "dep:sha2",
    "dep:serde_cbor",
    "dep:serde_bytes",
    "dep:aws-nitro-enclaves-cose",
    "dep:aws-nitro-enclaves-nsm-api",
]
http = ["dep:hyper", "dep:rustls", "dep:hyper-rustls"]
kms = [
    "dep:hyper",
    "dep:rustls",
    "dep:aws-types",
    "dep:aws-sdk-kms",
    "dep:hyper-rustls",
    "dep:aws-smithy-runtime-api",
    "dep:aws-smithy-http-client",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = "1"
tracing = "0.1"
rmp-serde = "1"
thiserror = "2"
tokio-vsock = "0.7"
sha2 = { version = "0.10", optional = true }
rustls = { version = "0.22", optional = true }
aws-types = { version = "1", optional = true }
tokio = { version = "1", features = ["io-util"] }
serde_bytes = { version = "0.11", optional = true }
aws-sdk-kms = { version = "1.72.0", optional = true }
serde_cbor = { version = "0.11", default-features = false, optional = true }
hyper-rustls = { version = "0.25.0", optional = true, features = ["webpki-roots"] }
aws-smithy-runtime-api = { version = "1.8.0", features = ["client"], optional = true }
hyper = { version = "0.14", features = ["client", "http1", "http2"], optional = true }
aws-nitro-enclaves-cose = { version = "0.5", optional = true, default-features = false }
aws-smithy-http-client = { version = "1.0.2", features = ["hyper-014"], optional = true }
aws-nitro-enclaves-nsm-api = { version = "0.4", optional = true, default-features = false }
const-fnv1a-hash = "1.1.0"

[dev-dependencies]
tokio-test = "0.4"
